syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message BinaryTestDto {
    bytes binary_field = 1;
    repeated bytes binary_field_collection = 2;
    google.protobuf.BytesValue binary_field_nullable = 3;
    ListOfBytes binary_field_nullable_collection = 4;
}
