syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message BoolTestDto {
    bool bool_field = 1;
    repeated bool bool_field_collection = 2;
    google.protobuf.BoolValue bool_field_nullable = 3;
    ListOfBool bool_field_nullable_collection = 4;
}
