syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message StringTestDto {
    string string_field = 1;
    repeated string string_field_collection = 2;
    google.protobuf.StringValue string_field_nullable = 3;
    ListOfString string_field_nullable_collection = 4;
}
